# libmayuri

./: CMakeLists.txt  LICENSE  README.md
include/: libmayuri.h  lm_str.h
src/: lm_dummy.c
